--- a/apps/host/src/app/app.component.html
+++ b/apps/host/src/app/app.component.html
@@ -1,4 +1,6 @@
 <main>
+
     <h1>Olá sou apenas um teste ainda  ✌🤪✌</h1>
-    <router-outlet></router-outlet>
+    <button (click)="onClick()">simular loader</button>
+    <!-- <router-outlet></router-outlet> -->
 </main>
