feat(testing-form): add components to test form many possibilities

--- a/apps/host/src/app/app.component.html
+++ b/apps/host/src/app/app.component.html
@@ -2,5 +2,15 @@
 
     <h1>Olá sou apenas um teste ainda  ✌🤪✌</h1>
     <button (click)="onClick()">simular loader</button>
-    <!-- <router-outlet></router-outlet> -->
+    <nav>
+        <ul>
+            <li>
+                <a routerLink="/">/home</a>
+            </li>
+            <li>
+                <a routerLink="/testing-form">/testing-form</a>
+            </li>
+        </ul>
+    </nav>
+    <router-outlet></router-outlet>
 </main>
