--- a/apps/host/src/app/features/call-me-out/call-me-out.component.html
+++ b/apps/host/src/app/features/call-me-out/call-me-out.component.html
@@ -7,8 +7,9 @@
 </form>
 
 
-
-<strong>{{target}}</strong>
+<div class="result">
+  <p [innerHTML]="message | async"></p>
+</div>
 <ul>
   <li *ngFor="let item of list; let i = index">
     <input type="checkbox" [attr.id]="'i-'+i"> <label [attr.for]="'i-'+i">{{item}}</label>
